engr441/while-jvm/tests/valid/ArrayInitialiser_Valid_5.while
int[] f() {
      return [1];
}

void main() {
    int[] array = f();
}
