engr441/while-jvm/tests/invalid-typing/Typing_Invalid_15.while
int f(int[] xs) {
    xs[0] = false;
    return xs[0];
}